--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+
         {
-            "type": "msedge",
+            "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
             "file": "c:\\Users\\AGodW\\OneDrive\\Documents\\gitpagerepo\\e4os.githubpages.io\\index.html"
